--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": "^8.2",
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9",
+        "owen-it/laravel-auditing": "^13.6",
         "symfony/mailer": "^7.1"
     },
     "require-dev": {
