--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,11 @@
-APP_NAME=Laravel
+APP_NAME=Celke
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:gSzcURW/NGZ1y7oCpUdUbrWvBAIovqFkvc/FcjvxGZs=
 APP_DEBUG=true
-APP_TIMEZONE=UTC
+APP_TIMEZONE=America/Sao_Paulo
 APP_URL=http://localhost
 
-APP_LOCALE=en
+APP_LOCALE=pt_BR
 APP_FALLBACK_LOCALE=en
 APP_FAKER_LOCALE=en_US
 
@@ -15,16 +15,16 @@ APP_MAINTENANCE_DRIVER=file
 BCRYPT_ROUNDS=12
 
 LOG_CHANNEL=stack
-LOG_STACK=single
+LOG_STACK=daily
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
-# DB_PASSWORD=
+DB_CONNECTION=mysql
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DATABASE=celke
+DB_USERNAME=root
+DB_PASSWORD=
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
@@ -46,13 +46,13 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=log
-MAIL_HOST=127.0.0.1
+MAIL_MAILER=smtp
+MAIL_HOST=sandbox.smtp.mailtrap.io
 MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
+MAIL_USERNAME=669e33f0177c0d
+MAIL_PASSWORD=1b93ef40f07604
 MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="hello@example.com"
+MAIL_FROM_ADDRESS="atendimento@celke.com.br"
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
