--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9",
         "owen-it/laravel-auditing": "^13.6",
+        "spatie/laravel-permission": "^6.10",
         "symfony/mailer": "^7.1"
     },
     "require-dev": {
